--- a/app/views/layouts/_myssp_group_data.html.erb
+++ b/app/views/layouts/_myssp_group_data.html.erb
@@ -4,20 +4,20 @@
        <div class="attributes_table" >
          <table border="0" cellspacing="0" cellpadding="0">
          <tr>
-           <th>Youth</th><td class='table_data'><%= @screen_info[:scheduled_group].current_youth %></td>
-           <th>Counselors</th><td class='table_data'><%= @screen_info[:scheduled_group].current_counselors %></td>
-           <th>Total</th><td class='table_data'><%= @screen_info[:scheduled_group].current_total %></td>
-           <th>Type</th><td class='table_data'><%= @screen_info[:session_type] %></td>
+           <th>Youth</th><td class='table_data'><%= @group.current_youth %></td>
+           <th>Counselors</th><td class='table_data'><%= @group.current_counselors %></td>
+           <th>Total</th><td class='table_data'><%= @group.current_total %></td>
+           <th>Type</th><td class='table_data'><%= @group.session.name %></td>
          </tr>
          <tr>
-           <th>Site</th><td class='table_data'><%= @screen_info[:site_name] %></td>
-           <th>Week</th><td class='table_data'><%= @screen_info[:period_name] %></td>
-           <th>Start Date</th><td class='table_data'><%= @screen_info[:start_date].strftime("%m/%d/%y") %></td>
-           <th>End Date</th><td class='table_data'><%= @screen_info[:end_date].strftime("%m/%d/%y") %></td>
+           <th>Site</th><td class='table_data'><%= @group.session.site.name %></td>
+           <th>Week</th><td class='table_data'><%= @group.session.period.name %></td>
+           <th>Start Date</th><td class='table_data'><%= @group.session.period.start_date.strftime("%m/%d/%y") %></td>
+           <th>End Date</th><td class='table_data'><%= @group.session.period.end_date.strftime("%m/%d/%y") %></td>
          </tr>
          <tr>
            <th>Group Status</th><td class='table_data'>
-                <% if @screen_info[:group_status] == 'registration' %>
+                <% if @group_status == 'registration' %>
                     Registered, not scheduled
                 <% else %>
                     Scheduled
