--- a/app/views/registration/show.html.erb
+++ b/app/views/registration/show.html.erb
@@ -35,6 +35,7 @@
                   <tr><td>Choice #8</td><td><%= @registration.request8.nil? ? "None" : Session.find(@registration.request8).name %></td></tr>
                   <tr><td>Choice #9</td><td><%= @registration.request9.nil? ? "None" : Session.find(@registration.request9).name %></td></tr>
                   <tr><td>Choice #10</td><td><%= @registration.request10.nil? ? "None" : Session.find(@registration.request10).name %></td></tr>
+                  <tr><td>Comments</td><td><%= @registration.comments %></td></tr>
                   <tr></tr>
                 </table>
                 <% if @increase_message  %>
