--- a/app/views/rosters/show.html.erb
+++ b/app/views/rosters/show.html.erb
@@ -3,7 +3,7 @@
      <div id="group_content">
         <%= render 'layouts/myssp_group_data' %>
         <div class="panel">
-                    <h3>Roster Status:  <%= @screen_info[:roster_status] %>   |   Left to Enter: <%= @screen_info[:left_to_enter] %> </h3>
+                    <h3>Roster Status:  <%= @roster.roster_status %>   |   Left to Enter: <%= @roster.left_to_enter %> </h3>
                     <div class="panel_contents">
                       <table border="0" cellspacing="0" cellpadding="0">
                         <thead>
@@ -22,7 +22,7 @@
                              <th>Special Needs<th>
                            </tr>
                          </thead>
-                         <tbody><% @screen_info[:items].each do |r| %>
+                         <tbody><% @roster.roster_items.each do |r| %>
                            <tr>
                              <td><%= if r.youth then 'Youth' else 'Counselor' end %></td>
                              <td><%= if r.male then 'Male' else 'Female' end %></td>
@@ -37,7 +37,7 @@
                              <td><%= r.shirt_size %></td>
                              <td><%= r.special_need %></td>
                              <td><%= link_to "Change", edit_roster_item_path(r.id)%>
-                                 <%= link_to "Delete", delete_roster_item_path(r.id), :group_id => @screen_info[:scheduled_group].id,
+                                 <%= link_to "Delete", delete_roster_item_path(r.id), :group_id => @group.id,
                                     :action => :delete, :confirm => "Are you sure you want to delete this?" %></td>
                            </tr>
                          <% end %>
@@ -45,10 +45,10 @@
                        </table>
                       <div class="action_items">
                          <div id = "column1"><span class="action_item"><%= link_to "Add New Participant",
-                            new_roster_item_path(:roster_id => @screen_info[:rosters].id,
-                            :group_id => @screen_info[:scheduled_group].id)%></span></div>
+                            new_roster_item_path(:roster_id => @roster.id,
+                            :group_id => @group.id)%></span></div>
                          <div id = "column2"></div> <span class="action_item"><%= link_to "Return to MySSP Page",
-                            myssp_path(:id => @screen_info[:scheduled_group].liaison_id) %></span></div>
+                            myssp_path(:id => @group.liaison_id) %></span></div>
                       </div>
 
                     </div>
