--- a/app/views/scheduled_groups/invoice.html.erb
+++ b/app/views/scheduled_groups/invoice.html.erb
@@ -66,7 +66,7 @@
                        </tr>
                        <tr>
                            <td>Final Payments</td>
-                           <td><%= @screen_info[:scheduled_group].current_total %></td>
+                           <td><%= @group.current_total %></td>
                            <td><%= number_to_currency(@screen_info[:invoice_data][:payment_schedule].final_payment) %></td>
                            <td><%= number_to_currency(@screen_info[:invoice_data][:final_payment_amount]) %></td>
                        </tr>
@@ -116,10 +116,10 @@
                 <% end %>
               <div>Instructions for updating and paying this invoice.<br><br>
               1. If necessary, update your enrollment numbers. To increase them, call the office at 916-488-6441.
-              To decrease, <%= link_to "click here", edit_scheduled_group_path(@screen_info[:scheduled_group].id) %>.<br><br>
-              2. To pay by credit card, <%= link_to "click here", record_payment_path(:group_id => @screen_info[:scheduled_group].id),
+              To decrease, <%= link_to "click here", edit_scheduled_group_path(@group.id) %>.<br><br>
+              2. To pay by credit card, <%= link_to "click here", record_payment_path(:group_id => @group.id),
               :title => "Click to record payment. Eventually to be replaced by payment gateway."%>. To pay by check,
-              <%= link_to "print this invoice", invoice_path(:group_id => @screen_info[:scheduled_group].id, :format => "pdf") %> and mail it with a check to the SSP office.</div>
+              <%= link_to "print this invoice", invoice_path(:group_id => @group.id, :format => "pdf") %> and mail it with a check to the SSP office.</div>
          </table>
                </div>
         </div>
@@ -169,7 +169,7 @@
               <div>This statement shows the entire cost of your SSP trip and does not necessary show what you currently owe.
               To determine your current (or next) payment to SSP, refer to the invoice section above. To print a copy of this
               statement for your records,
-                <%= link_to " click here.", statement_path(:group_id => @screen_info[:scheduled_group].id, :format => "pdf") %></div>
+                <%= link_to " click here.", statement_path(:group_id => @group.id, :format => "pdf") %></div>
               </div>
            </div>
         </div>
