--- a/app/views/shared/_error_messages_payment.html.erb
+++ b/app/views/shared/_error_messages_payment.html.erb
@@ -1,10 +1,10 @@
-<% if @screen_info[:payment].errors.any? %>
+<% if @payment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@screen_info[:payment].errors.count, "error") %>
+      <h2><%= pluralize(@payment.errors.count, "error") %>
         prohibited this item from being saved:</h2>
       <p>There were problems with the following fields:</p>
       <ul>
-        <% @screen_info[:payment].errors.full_messages.each do |msg| %>
+        <% @payment.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
         <% end %>
        </ul>
