Rewrote invoice and statement logic for view; moved to model out of controller. Need to refactor invoice report and pdf.

--- a/app/views/scheduled_groups/invoice.html.erb
+++ b/app/views/scheduled_groups/invoice.html.erb
@@ -4,175 +4,161 @@
      <div id="group_content">
         <%= render 'layouts/myssp_group_data' %>
        <div class="panel">
-        <% if @screen_info[:invoice_data][:second_payment_due?] %>
-              <h3><%= "
-              Current Invoice:: Due date: #{@screen_info[:invoice_data][:payment_schedule].second_payment_date.strftime("%m/%d/%Y")}"%></h3>
+              <h3>Account Statement</h3>
               <div class="panel_contents">
                 <table border="0" cellspacing="0" cellpadding="0">
                    <thead>
                        <th>Date</th>
-                       <th >Description</th>
+                       <th>Description</th>
                        <th>Amount Due</th>
                        <th>Amount Received</th>
                    </thead>
                    <tbody>
-                       <% @screen_info[:invoice_data][:event_list].each do |e| %>
                            <tr>
-                             <td><%= e[:date].strftime("%m/%d/%Y") %></td>
-                             <td><%= e[:name] %></td>
-                             <td class= "money"><% unless e[:amount_due].nil? %>
-                                   <%= e[:amount_due] %><% end %>
+                             <td><%= Registration.find(@group.registration_id).created_at.strftime("%m/%d/%Y") %></td>
+                             <td>Deposit</td>
+                             <td><% unless @group.deposit_amount.nil? %>
+                                   <%= number_to_currency(@group.deposit_amount) %><% end %>
                              </td>
-                             <td class= "money"><% unless e[:amount_received].nil? %>
-                                   <%= e[:amount_received] %><% end %>
-                             </td>
+                             <td></td>
                            </tr>
+                           <tr>
+                             <td><%= @group.session.payment_schedule.second_payment_date.strftime("%m/%d/%Y") %></td>
+                             <td>Second Payment</td>
+                             <td><% unless @group.second_pay_amount.nil? %>
+                                   <%= number_to_currency(@group.second_pay_amount) %><% end %>
+                             </td>
+                             <td></td>
+                           </tr>
+                           <tr>
+                             <td><%= @group.session.payment_schedule.final_payment_date.strftime("%m/%d/%Y") %></td>
+                             <td>Final Payment</td>
+                             <td><% unless @group.final_pay_amount.nil? %>
+                                   <%= number_to_currency(@group.final_pay_amount) %><% end %>
+                             </td>
+                             <td></td>
+                           </tr>
+                           <tr>
+                             <td></td>
+                             <td>Total</td>
+                             <td><% unless @group.total_due.nil? %>
+                                   <%= number_to_currency(@group.total_due) %><% end %>
+                             </td>
+                             <td></td>
+                           </tr>
+                       <% if @group.payments %>
+                            <% @group.payments.each do |p| %>
+                               <tr>
+                                 <td>p.payment_date.strftime("%m/%d/%Y") </td>
+                                 <td>Payment</td>
+                                 <td></td>
+                                 <td><%= number_to_currency(p.payment_amount) %></td>
+                               </tr>
+                            <% end %>
                        <% end %>
                        <tr>
                            <td></td>
-                           <td>Paid to date</td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:amount_paid]) %></td>
+                           <td>Total paid to date</td>
+                         <td></td>
+                         <td><%= number_to_currency(@group.amount_paid) %></td>
                        </tr>
                        <tr>
                            <td></td>
                            <td>Balance Due</td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:current_balance]) %></td>
+                           <td><%= number_to_currency(@group.current_balance) %></td>
+                           <td></td>
                         </tr>
                    </tbody>
                 </table>
              </div>
-             <% else %>
-              <h3><%= "Current Invoice:: Due date: #{@screen_info[:invoice_data][:payment_schedule].final_payment_date.strftime("%m/%d/%Y")}"%></h3>
-              <div class="panel_contents">
-                <table border="0" cellspacing="0" cellpadding="0">
-                   <thead>
-                       <th></th>
-                       <th>Number</th>
-                       <th>Amount Per</th>
-                       <th>Total Amount</th>
-                   </thead>
-                   <tbody>
-                       <tr>
-                           <td>Deposits</td>
-                           <td><%= @screen_info[:invoice_data][:deposits_due_count] %></td>
-                           <td><%= number_to_currency @screen_info[:invoice_data][:payment_schedule].deposit %></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:deposit_amount]) %></td>
-                       </tr>
-                       <tr>
-                           <td>2nd Payments</td>
-                           <td><%= @screen_info[:invoice_data][:second_payments_due_count] %></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:payment_schedule].second_payment) %></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:second_payment_amount]) %></td>
-                       </tr>
-                       <tr>
-                           <td>Final Payments</td>
-                           <td><%= @group.current_total %></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:payment_schedule].final_payment) %></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:final_payment_amount]) %></td>
-                       </tr>
-                       <tr>
-                            <td>Net Adjustments</td>
-                            <td></td>
-                            <td></td>
-                            <td><%= number_to_currency(@screen_info[:invoice_data][:adjustment_total]) %></td>
-                       </tr>
-                       <tr>
-                           <td>Total</td>
-                           <td></td>
-                           <td></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:deposit_amount] +
-                                                              @screen_info[:invoice_data][:second_payment_amount] +
-                                                            @screen_info[:invoice_data][:final_payment_amount]) %></td>
-                       </tr>
-                       <tr>
-                           <td>Paid to date</td>
-                           <td></td>
-                           <td></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:amount_paid]) %></td>
-                       </tr>
-                       <% if @screen_info[:invoice_data][:second_late_payment_required?]%>
-                         <tr>
-                           <td>Second Payment Late Charge</td>
-                           <td></td>
-                           <td></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:second_late_payment_amount]) %></td>
-                         </tr>
-                       <% end %>
-                       <% if @screen_info[:invoice_data][:final_late_payment_required?]%>
-                         <tr>
-                           <td>Second Payment Late Charge</td>
-                           <td></td>
-                           <td></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:final_late_payment_amount]) %></td>
-                         </tr>
-                       <% end %>
-                        <tr>
-                           <td>Balance Due</td>
-                           <td></td>
-                           <td></td>
-                           <td><%= number_to_currency(@screen_info[:invoice_data][:current_balance]) %></td>
-                        </tr>
-                   </tbody>
-                <% end %>
-              <div>Instructions for updating and paying this invoice.<br><br>
-              1. If necessary, update your enrollment numbers. To increase them, call the office at 916-488-6441.
-              To decrease, <%= link_to "click here", edit_scheduled_group_path(@group.id) %>.<br><br>
-              2. To pay by credit card, <%= link_to "click here", record_payment_path(:group_id => @group.id),
-              :title => "Click to record payment. Eventually to be replaced by payment gateway."%>. To pay by check,
-              <%= link_to "print this invoice", invoice_path(:group_id => @group.id, :format => "pdf") %> and mail it with a check to the SSP office.</div>
-         </table>
+         <div>This statement shows the entire cost of your SSP trip and does not necessary show what you currently owe.
+         To determine your current (or next) payment to SSP, refer to the invoice section above. To print a copy of this
+         statement for your records,
+         <%= link_to " click here.", statement_path(:group_id => @group.id, :format => "pdf") %></div>
+        </table>
                </div>
         </div>
-        <div class="panel">
-           <h3>Current Statement</h3>
-              <div class="panel_contents">
-                 <table border="0" cellspacing="0" cellpadding="0">
-                    <thead>
-                        <th>Date</th>
-                        <th>Description</th>
-                        <th>Payment Notes</th>
-                        <th>Amount Due</th>
-                        <th>Amount Received</th>
-                    </thead>
-                    <tbody>
-                        <% @screen_info[:invoice_data][:event_list].each do |e| %>
-                            <tr>
-                              <td><%= e[0].strftime("%m/%d/%y") %></td>
-                              <td><%= e[1] %></td>
-                              <td><% unless e[2].nil? %>
-                                    <%= e[2] %>
-                                <% end %>
-                              </td>
-                              <td><% unless e[3].nil? %>
-                                    <%= e[3] %>
-                                <% end %>
-                              </td>
-                              <td><% unless e[4].nil? %>
-                                    <%= e[4] %>
-                                <% end %>
-                              </td>
-                            </tr>
-                        <% end %>
-                        <tr>
-                            <td></td>
-                            <td>Totals</td><td></td>
-                            <td><%= number_to_currency(@screen_info[:invoice_data][:total_due]) %></td>
-                            <td><%= number_to_currency(@screen_info[:invoice_data][:amount_paid]) %></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Balance Due</td><td></td>
-                            <td><%= number_to_currency(@screen_info[:invoice_data][:current_balance]) %></td>
-                         </tr>
-                    </tbody>
-                 </table>
-              <div>This statement shows the entire cost of your SSP trip and does not necessary show what you currently owe.
-              To determine your current (or next) payment to SSP, refer to the invoice section above. To print a copy of this
-              statement for your records,
-                <%= link_to " click here.", statement_path(:group_id => @group.id, :format => "pdf") %></div>
-              </div>
-           </div>
+    <div class="panel">
+    <% if @group.second_payment_date.nil? %>
+        <h3><%= "Current Invoice Due: #{@group.session.payment_schedule.second_payment_date.strftime("%m/%d/%Y")}. A 10 percent late fee will be applied to all late payments."%></h3>
+          <div class="panel_contents">
+            <table border="0" cellspacing="0" cellpadding="0">
+              <thead>
+              <th></th>
+              <th>Number</th>
+              <th>Amount Per</th>
+              <th>Total Amount</th>
+              </thead>
+              <tbody>
+              <tr>
+                <td>Deposits</td>
+                <td><%= @group.overall_high_water %></td>
+                <td><%= number_to_currency @group.session.payment_schedule.deposit %></td>
+                <td><%= number_to_currency @group.deposit_amount %></td>
+              </tr>
+              <tr>
+                <td>2nd Payments</td>
+                <td><%= @group.second_half_high_water %></td>
+                <td><%= number_to_currency @group.session.payment_schedule.second_payment %></td>
+                <td><%= number_to_currency @group.second_pay_amount %></td>
+              </tr>
+              <tr>
+                <td>Final Payments</td>
+                <td><%= @group.current_total %></td>
+                <td><%= number_to_currency @group.session.payment_schedule.final_payment %></td>
+                <td><%= number_to_currency @group.final_pay_amount %></td>
+              </tr>
+              <tr>
+                <td>Net Adjustments</td>
+                <td></td>
+                <td></td>
+                <td><%= number_to_currency @group.adjustment_total %></td>
+              </tr>
+              <tr>
+                <td>Total</td>
+                <td></td>
+                <td></td>
+                <td><%= number_to_currency @group.total_due %></td>
+              </tr>
+              <tr>
+                <td>Paid to date</td>
+                <td></td>
+                <td></td>
+                <td><%= number_to_currency @group.amount_paid %></td>
+              </tr>
+              <% if @group.second_late_penalty_due? %>
+                  <tr>
+                    <td>Second Payment Late Charge</td>
+                    <td></td>
+                    <td></td>
+                    <td><%= number_to_currency @group.second_late_penalty_amount %></td>
+                  </tr>
+              <% end %>
+              <% if @group.final_late_penalty_due? %>
+                  <tr>
+                    <td>Final Payment Late Charge</td>
+                    <td></td>
+                    <td></td>
+                    <td><%= number_to_currency @group.final_late_penalty_amount %></td>
+                  </tr>
+              <% end %>
+              <tr>
+                <td>Balance Due</td>
+                <td></td>
+                <td></td>
+                <td><%= number_to_currency @group.current_balance %></td>
+              </tr>
+              </tbody>
+              </table>
+            </div>
+        <div>Instructions for updating and paying this invoice:<br>
+      1. If necessary, update your enrollment numbers. To increase them, call the office at 916-488-6441.
+      To decrease, <%= link_to "click here", edit_scheduled_group_path(@group.id) %>.<br>
+      2. To pay by credit card, <%= link_to "click here", record_payment_path(:group_id => @group.id) %>. To pay by check,
+      <%= link_to "print this invoice", invoice_path(:group_id => @group.id, :format => "pdf") %> and mail it with a check to the SSP office.</div>
+
+        <% end %>
+        </div>
         </div>
      </div>
- </div>
 
