--- a/app/views/scheduled_groups/invoice.html.erb
+++ b/app/views/scheduled_groups/invoice.html.erb
@@ -1,4 +1,3 @@
-<%= render 'layouts/myssp_header' %>
 <div id="active_admin_content">
   <div id="main_content_wrapper">
      <div id="group_content">
@@ -49,8 +48,8 @@
                        <% if @group.payments %>
                             <% @group.payments.each do |p| %>
                                <tr>
-                                 <td>p.payment_date.strftime("%m/%d/%Y") </td>
-                                 <td>Payment</td>
+                                 <td><%= p.payment_date.strftime("%m/%d/%Y")  %></td>
+                                 <td><%=  "Payment: #{p.payment_method}"  %></td>
                                  <td></td>
                                  <td><%= number_to_currency(p.payment_amount) %></td>
                                </tr>
